--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "20.0.0"
 
+    compileSdkVersion 21
+    buildToolsVersion '20.0.0'
     defaultConfig {
-        applicationId "ws.mahesh.apps.randomgenerator"
+        applicationId 'ws.mahesh.apps.randomgenerator'
         versionCode 1
-        versionName "0.1"
+        versionName '0.1'
     }
     buildTypes {
         debug {
@@ -19,7 +19,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     productFlavors {
         defaultbuild {
             minSdkVersion 10
@@ -36,7 +35,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.android.support:support-v4:20.0.0'
-
     lPreviewCompile 'com.android.support:appcompat-v7:+'
     lPreviewCompile 'com.android.support:support-v4:+'
 }
